@@ -1,3 +1,8 @@
+Thu Oct 24 04:38:52 GMT 2013  Olly Betts <olly@survex.com>
+
+	* configure.ac,tests/soaktest/soaktest.cc: If srandom() and random()
+	  aren't available, use srand() and rand() instead.
+
 Thu Oct 24 02:34:06 GMT 2013  Olly Betts <olly@survex.com>
 
 	* common/safewindows.h: Define WINVER to 0x0500 if not otherwise set,
